--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -55,6 +55,8 @@
       <%- include('../partials/products');%>
      </div>
       </div>
+      <%- include('../partials/footerSection');%>
+      
       <%- include('../partials/footer');%>
     
 </body>
