--- a/views/partials/adminCoupon.ejs
+++ b/views/partials/adminCoupon.ejs
@@ -1,5 +1,5 @@
 <div id="coupon" class="contents">
-    <h2 class="text-center ">Your Orders</h2>
+    <h2 class="text-center "><strong>Coupon Management</strong></h2>
     <button type="button" class="btn btn-success d-flex mr-3 ml-auto" data-toggle="modal" data-target="#exampleModalCenter">
         Add Coupon
     </button>
