--- a/views/partials/adminUsers.ejs
+++ b/views/partials/adminUsers.ejs
@@ -1,10 +1,5 @@
 <div id="users" class="contents mt-5">
-  <h2 class="container-fluid d-flex justify-content-center"><strong>Users</strong></h2>
-    <form class="form-inline mb-4">
-      <input class="form-control mr-2 w-25 d-flex justify-content-center" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-dark" type="submit">Search</button>
-    </form>
-  
+  <h2 class="container-fluid d-flex justify-content-center mb-4"><strong>Users</strong></h2>
     <div class="table-responsive">
       <table class="table table-light">
         <thead class="thead-light">
