--- a/views/partials/adminOrders.ejs
+++ b/views/partials/adminOrders.ejs
@@ -1,5 +1,5 @@
 <div id="orders" class="contents">
-    <h2 class="text-center mb-4">Order Management</h2>
+    <h2 class="text-center "><strong>Order Management</strong></h2>
    
         <div class="container">
             
