Fix : Fixed return

--- a/views/partials/footerSection.ejs
+++ b/views/partials/footerSection.ejs
@@ -26,7 +26,7 @@
                       </a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="#">
+                      <a href="https://www.linkedin.com/in/george-jose-714151240/">
                           <i class="fab fa-linkedin-in"></i>
                       </a>
                   </li>
