--- a/views/partials/products.ejs
+++ b/views/partials/products.ejs
@@ -2,12 +2,16 @@
   <div class="row">
     <% products.forEach((product, index) => { %>
       <div class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3">
-        <a href="/products/<%= product._id %>" class="text-decoration-none text-dark ">
+       
           <div class="product">
-            <img src="<%= product.productImages[0].secure_url %>" alt=""> <!-- Display the first image URL -->
+            <a href="/products/<%= product._id %>" class="text-decoration-none text-dark ">
+            <img src="<%= product.productImages[0].secure_url %>" alt="">
+             </a>
             <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
               <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
+              <button class="shoppingBag" onclick="addToCart('<%= product._id %>')">
               <li class="icon ml-3"><span class="fas fa-shopping-bag"></span></li>
+              </button>
             </ul>
           </div>
           <% if (product.offers && product.offers.length > 0 && product.offers[0]) { %>
@@ -15,8 +19,9 @@
           <% } %>
           <div class="title pt-4 pb-1"><%= product.productTitle %></div>
           <div class="price">$ <%= product.productPrice %>.0</div>
-        </a>
       </div>
     <% }); %>
   </div>
 </div>
+
+<script src="../js/addToCart.js"></script>
