--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -47,7 +47,26 @@
             </div>
           <% }); %>
           
+          <div class="modal fade" id="editAddressSuccessModal" tabindex="-1" role="dialog" aria-labelledby="editAddressSuccessModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="editAddressSuccessModalLabel">Success!</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Your address has been successfully updated.
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
           
+
          <!-- user add address form -->
      <div class="modal fade" id="addAddressModal" tabindex="-1" aria-labelledby="addAddressModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -104,7 +123,7 @@
                         <form id="editAddressForm">
                             <div class="mb-3">
                                 <label for="editName" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="editName" name="editName" value="<%= userCart.user.name %>" required>
+                                <input type="text" class="form-control" id="editName" name="editName" value="<%= userCart.user.name %>" required disabled>
                             </div>
                             <div class="mb-3">
                                 <label for="editCountry" class="form-label">Country</label>
@@ -177,7 +196,7 @@
                         <div class="form-group">
                             <label for="useWallet">Use Wallet Balance:</label>
                             <input type="radio" id="useWallet" name="useWallet" value="yes"> Yes
-                            <input type="radio" id="useWallet" name="useWallet" value="no"> No
+                            <input type="radio" id="useWallet" name="useWallet" value="no" checked> No
                         </div>
                         <button type="button" class="subscribe btn btn-dark btn-block shadow-sm confrimPayementBtn">Confirm Payment</button>
                     </form>
