--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -52,6 +52,21 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="deleteAddressModal" tabindex="-1" aria-labelledby="editProductModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Delete Address</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p> Are you sure you want to delete the address ?</p>
+         <button type="button" id="modalDeleteAddressBtn" class="btn btn-danger ml-4 mt-1 btn-logout">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
