--- a/views/partials/adminAddProduct.ejs
+++ b/views/partials/adminAddProduct.ejs
@@ -1,7 +1,8 @@
 <div id="addProduct" class="contents">
   <div class="container-fluid">
     <h2 class="mb-4">Add Product</h2>
-    <form id="productForm" action="/admin/add-product" method="POST" enctype="multipart/form-data">
+    <!-- <form id="productForm" action="/admin/add-product" method="POST" enctype="multipart/form-data"> -->
+    <form id="productForm" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="productTitle" class="form-label">Product Title</label>
         <input type="text" class="form-control" id="productTitle" name="productTitle" required>
@@ -46,6 +47,17 @@
     </form>
   </div>
 
+</div>
+
+<div class="modal fade" id="productSuccess" tabindex="-1" aria-labelledby="productSuccess" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Product added Successfully </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script src="../js/adminAddProduct.js"></script>
